add and delete portfolio details
delete portfolio-details, add portfolio details instagram-growth, add portfolio details rally-relate

--- a/portfolio.html
+++ b/portfolio.html
@@ -114,7 +114,7 @@
                   <img src="assets/img/portfolio/heejuptogo.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/heejuptogo.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="instagram-growth-and-content-strategy.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
@@ -134,7 +134,7 @@
                   <img src="assets/img/portfolio/Rally & Relate 2025.png" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/Rally & Relate 2025.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="rally-relate-2025.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
