--- a/instagram-growth-and-content-strategy.html
+++ b/instagram-growth-and-content-strategy.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Portfolio Details - FolioOne Bootstrap Template</title>
+  <title>Instagram Growth & Content Strategy</title>
   <meta name="description" content="">
   <meta name="keywords" content="">
 
@@ -34,6 +34,7 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
+  
 </head>
 
 <body class="portfolio-details-page">
@@ -92,7 +93,7 @@
 
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
-        <h2>Portfolio Details</h2>
+        <h2>Instagram Growth & Content Strategy</h2>
         <p>This is where the story goes deeper, from the idea to how it came to life</p>
       </div><!-- End Section Title -->
 
@@ -132,10 +133,10 @@
                       <img src="assets/img/portfolio/social media heejuptogo.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/social media heejuptogo.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/content heejuptogo.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/social media heejuptogo.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/content heejuptogo 2.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -146,16 +147,28 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/social media heejuptogo.png" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/content pillar.jpg" alt="At the heart of Heejuptogo is our core message: Self Love: Be You. Our strategy is anchored by four key pillars&mdash;Education (50%), Engagement (30%), Promo (10%), and Inspiration (10%)&mdash;to drive brand awareness while providing real value. By balancing deep product knowledge with relatable lifestyle content and interactive challenges, we aim to build a meaningful connection with our audience that goes beyond just clothing." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-6.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/content plan.jpg" alt="Stay organized and consistent with our structured two-week content schedule for Heejuptogo, designed to keep our community engaged every single day. From Daily Looks and Product Best Sellers to interactive anniversary countdowns and movie-inspired outfit ideas, this calendar ensures a seamless blend of Feed and Story updates that build excitement and keep our fashion-forward audience coming back for more." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-11.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/top 3 post.jpg" alt="Our feed performance highlights the power of community interaction, with our top three posts from August 16–28 all rooted in the Engagement pillar. Leading the way is our Anniversary Giveaway, which generated over 3,700 reach and high save rates, followed by interactive math-themed games and outfit quizzes that reached up to 4,460 accounts. These results prove that two-way communication is key to driving profile visits and sustained interest in the brand." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/portfolio-12.webp" alt="Gallery Image" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/top 3 igs.jpg" alt="In the world of Instagram Stories, the Engagement pillar continues to dominate, focusing on interactive features to connect with our audience. Our This or That series and introductory games performed exceptionally well, with the top story reaching 602 accounts and generating 473 forward taps. By utilizing polls and interactive stickers, we’ve successfully created a dynamic space where #Heejuplova can actively participate in the brand's journey." class="img-fluid glightbox">
+                  </div>
+                  <div class="col-3">
+                    <img src="assets/img/portfolio/paid brand awarness.jpg" alt="The Brand Awareness ads delivered 3,030 Ad Recall Lift in 3 days, reaching 41,991 people with an efficient CPM of Rp 2,800. This equals 7.21% Ad Recall Lift, exceeding the 5% KPI. The top-performing setup was Lookalike Audience 2% with Creative A." class="img-fluid glightbox">
+                  </div>
+                  <div class="col-3">
+                    <img src="assets/img/portfolio/paid engagement.jpg" alt="The Post Engagement ads generated 14,450 interactions in just 2 days, reaching 35,824 people with a low CPM of Rp 4,300. This means 40.33% of the audience interacted with the content, far exceeding the 10% target. The best performance came from Broad Audience with Creative D." class="img-fluid glightbox">
+                  </div>
+                  <div class="col-3">
+                    <img src="assets/img/portfolio/performance before.jpg" alt="During this period, the account reached 7,518 accounts and engaged 138 accounts, with total followers at 63.4K. Performance was relatively low, showing limited visibility and interaction." class="img-fluid glightbox">
+                  </div>
+                  <div class="col-3">
+                    <img src="assets/img/portfolio/performance after.jpg" alt="After optimization, the account experienced a major performance boost. Accounts reached jumped to 75.4K, representing a +903% increase, while accounts engaged rose to 599 (+334%). Total followers remained stable at 63.4K, indicating that the growth mainly came from improved content reach and engagement rather than follower increase." class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
@@ -174,16 +187,16 @@
             <div class="portfolio-details-content">
               <div class="project-meta">
                 <div class="badge-wrapper">
-                  <span class="project-badge">UX/UI Design</span>
+                  <span class="project-badge">Growth</span>
                 </div>
                 <div class="date-client">
                   <div class="meta-item">
                     <i class="bi bi-calendar-check"></i>
-                    <span>September 2024</span>
+                    <span>July 2022</span>
                   </div>
                   <div class="meta-item">
                     <i class="bi bi-buildings"></i>
-                    <span>DigitalCraft Solutions</span>
+                    <span>heejuptogo</span>
                   </div>
                 </div>
               </div>
@@ -197,7 +210,7 @@
 
               <div class="project-overview">
                 <p class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas varius tortor nibh, sit amet tempor nibh finibus et. Aenean eu enim justo. Vestibulum aliquam hendrerit molestie.
+                  Heejuptogo is a local fashion brand focusing on modest wear with a youthful and trend-driven aesthetic. The brand targets Gen Z and student audiences through digital platforms, with Instagram as its primary channel for brand discovery and engagement.
                 </p>
 
                 <div class="accordion project-accordion" id="portfolio-details-projectAccordion">
@@ -209,7 +222,7 @@
                     </h2>
                     <div id="portfolio-details-collapse-1" class="accordion-collapse collapse show" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Cras ultricies ligula sed magna dictum porta. Nulla quis lorem ut libero malesuada feugiat. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Pellentesque in ipsum id orci porta dapibus. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui.</p>
+                        <p>Spearheaded a 3-month digital transformation for Heejuptogo, a local fashion brand. The project focused on reshaping the brand's digital presence by integrating organic content strategy with high-efficiency paid advertisements to capture a wider and more active audience.</p>
                       </div>
                     </div>
                   </div>
@@ -222,7 +235,13 @@
                     </h2>
                     <div id="portfolio-details-collapse-2" class="accordion-collapse collapse" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis porttitor volutpat. Curabitur aliquet quam id dui posuere blandit. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Sed porttitor lectus nibh.</p>
+                        <p>Heejuptogo faced challenges in expanding its digital reach and activating audience engagement despite having an existing Instagram presence.</p>
+                        <ul>
+                        <li>Low organic reach and limited audience growth.</li>
+                        <li>Inconsistent content performance and engagement.</li>
+                        <li>Instagram profile and bio not yet optimized to clearly communicate brand value.</li>
+                        <li>Paid ads had not been maximized to support organic content performance.</li>
+                        </ul>
                       </div>
                     </div>
                   </div>
@@ -235,7 +254,43 @@
                     </h2>
                     <div id="portfolio-details-collapse-3" class="accordion-collapse collapse" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Donec sollicitudin molestie malesuada. Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec velit neque, auctor sit amet aliquam vel, ullamcorper sit amet ligula.</p>
+                        <p>I led a 3-month Instagram growth and content optimization strategy by integrating organic content development with performance-driven paid advertisements.</p>
+                        <p><strong>Key Initiatives:</strong></p>
+                        <ul>
+                        <li>
+                        <p><strong>Content Strategy Revamp</strong></p>
+                        <p>Developed a structured content framework focusing on:</p>
+                        <ul>
+                        <li>Product storytelling</li>
+                        <li>Educational &amp; relatable fashion content</li>
+                        <li>Trend-adaptive reels and visual formats</li>
+                        <li>Clear CTA to encourage saves, shares, and profile visits</li>
+                        </ul>
+                        </li>
+                        <li>
+                        <p>Instagram Profile Optimization</p>
+                        <ul>
+                        <li>Optimized Instagram bio to clearly communicate brand positioning, value proposition, and shopping intent</li>
+                        <li>Improved profile structure to support discoverability and conversion</li>
+                        </ul>
+                        </li>
+                        <li>
+                        <p>Organic + Paid Synergy</p>
+                        <ul>
+                        <li>Identified top-performing organic content and scaled them through paid ads</li>
+                        <li>Used paid ads not only for reach, but to boost engagement quality (saves, shares, interactions)</li>
+                        <li>Applied efficient audience targeting to reach relevant fashion &amp; modest wear audiences</li>
+                        </ul>
+                        </li>
+                        <li>
+                        <p>Performance Monitoring &amp; Iteration</p>
+                        <ul>
+                        <li>Continuously analyzed insights (reach, engagement rate, interaction source)</li>
+                        <li>Adjusted creatives, copy, and ad formats to maximize understanding and recall</li>
+                        </ul>
+                        </li>
+                        </ul>
+                        <p></p>
                       </div>
                     </div>
                   </div>
@@ -247,24 +302,24 @@
                 <div class="row g-3">
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Real-time Data Visualization</li>
-                      <li><i class="bi bi-check2-circle"></i> User Role Management</li>
-                      <li><i class="bi bi-check2-circle"></i> Secure Authentication</li>
+                      <li><i class="bi bi-check2-circle"></i> Strategic Content Framework</li>
+                      <li><i class="bi bi-check2-circle"></i> Audience & Insight-Driven Planning</li>
+                      <li><i class="bi bi-check2-circle"></i> Visual & Brand Repositioning</li>
                     </ul>
                   </div>
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Customizable Dashboards</li>
-                      <li><i class="bi bi-check2-circle"></i> Data Export Options</li>
-                      <li><i class="bi bi-check2-circle"></i> Multi-device Support</li>
+                      <li><i class="bi bi-check2-circle"></i> Organic + Paid Growth Strategy</li>
+                      <li><i class="bi bi-check2-circle"></i> Performance Tracking & Optimization</li>
+                      <li><i class="bi bi-check2-circle"></i> Scalable Content System</li>
                     </ul>
                   </div>
                 </div>
               </div>
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
-                <a href="#" class="btn-view-project">View Live Project</a>
-                <a href="#" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.instagram.com/heejuptogo___/" target="_blank" class="btn-view-project">View Live Project</a>
+                <a href="rally-relate-2025.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
