--- a/rally-relate-2025.html
+++ b/rally-relate-2025.html
@@ -130,13 +130,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/social media heejuptogo.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/Rally & Relate 2025.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/content heejuptogo.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/Rally & Relate 2025 2.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/content heejuptogo 2.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/Rally & Relate 2025 3.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -147,38 +147,38 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/content pillar.jpg" alt="At the heart of Heejuptogo is our core message: Self Love: Be You. Our strategy is anchored by four key pillars&mdash;Education (50%), Engagement (30%), Promo (10%), and Inspiration (10%)&mdash;to drive brand awareness while providing real value. By balancing deep product knowledge with relatable lifestyle content and interactive challenges, we aim to build a meaningful connection with our audience that goes beyond just clothing." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 4.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/content plan.jpg" alt="Stay organized and consistent with our structured two-week content schedule for Heejuptogo, designed to keep our community engaged every single day. From Daily Looks and Product Best Sellers to interactive anniversary countdowns and movie-inspired outfit ideas, this calendar ensures a seamless blend of Feed and Story updates that build excitement and keep our fashion-forward audience coming back for more." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 5.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/top 3 post.jpg" alt="Our feed performance highlights the power of community interaction, with our top three posts from August 16–28 all rooted in the Engagement pillar. Leading the way is our Anniversary Giveaway, which generated over 3,700 reach and high save rates, followed by interactive math-themed games and outfit quizzes that reached up to 4,460 accounts. These results prove that two-way communication is key to driving profile visits and sustained interest in the brand." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 6.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/top 3 igs.jpg" alt="In the world of Instagram Stories, the Engagement pillar continues to dominate, focusing on interactive features to connect with our audience. Our This or That series and introductory games performed exceptionally well, with the top story reaching 602 accounts and generating 473 forward taps. By utilizing polls and interactive stickers, we’ve successfully created a dynamic space where #Heejuplova can actively participate in the brand's journey." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 7.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/paid brand awarness.jpg" alt="The Brand Awareness ads delivered 3,030 Ad Recall Lift in 3 days, reaching 41,991 people with an efficient CPM of Rp 2,800. This equals 7.21% Ad Recall Lift, exceeding the 5% KPI. The top-performing setup was Lookalike Audience 2% with Creative A." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 8.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/paid engagement.jpg" alt="The Post Engagement ads generated 14,450 interactions in just 2 days, reaching 35,824 people with a low CPM of Rp 4,300. This means 40.33% of the audience interacted with the content, far exceeding the 10% target. The best performance came from Broad Audience with Creative D." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 9.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/performance before.jpg" alt="During this period, the account reached 7,518 accounts and engaged 138 accounts, with total followers at 63.4K. Performance was relatively low, showing limited visibility and interaction." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 10.png" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/performance after.jpg" alt="After optimization, the account experienced a major performance boost. Accounts reached jumped to 75.4K, representing a +903% increase, while accounts engaged rose to 599 (+334%). Total followers remained stable at 63.4K, indicating that the growth mainly came from improved content reach and engagement rather than follower increase." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/Rally & Relate 2025 11.png" alt="" class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
 
               <div class="tech-stack-badges" data-aos="fade-up" data-aos-delay="300">
-                <span>Angular</span>
-                <span>Express.js</span>
-                <span>PostgreSQL</span>
-                <span>GraphQL</span>
-                <span>Firebase</span>
+                <span>Event Strategy</span>
+                <span>Brand Activation</span>
+                <span>Community Building</span>
+                <span>Partnership Strategy</span>
+                <span>Integrated Campaign</span>
               </div>
             </div>
           </div>
@@ -187,16 +187,16 @@
             <div class="portfolio-details-content">
               <div class="project-meta">
                 <div class="badge-wrapper">
-                  <span class="project-badge">Growth</span>
+                  <span class="project-badge">Campaign</span>
                 </div>
                 <div class="date-client">
                   <div class="meta-item">
                     <i class="bi bi-calendar-check"></i>
-                    <span>July 2022</span>
+                    <span>August 2025</span>
                   </div>
                   <div class="meta-item">
                     <i class="bi bi-buildings"></i>
-                    <span>heejuptogo</span>
+                    <span>KGTennis</span>
                   </div>
                 </div>
               </div>
@@ -205,12 +205,12 @@
 
               <div class="project-website">
                 <i class="bi bi-link-45deg"></i>
-                <a href="https://www.instagram.com/heejuptogo___/" target="_blank">Instagram: @heejuptogo___</a>
+                <a href="https://www.instagram.com/kgtennisacademy/" target="_blank">Instagram: @kgtennisacademy</a>
               </div>
 
               <div class="project-overview">
                 <p class="lead">
-                  Heejuptogo is a local fashion brand focusing on modest wear with a youthful and trend-driven aesthetic. The brand targets Gen Z and student audiences through digital platforms, with Instagram as its primary channel for brand discovery and engagement.
+                  KGTennis Academy is Kompas Gramedia’s official sports community, positioned at the intersection of lifestyle, networking, and corporate engagement. Operating within one of Indonesia’s largest media groups, the brand leverages sports as a platform for relationship-building and brand collaboration.
                 </p>
 
                 <div class="accordion project-accordion" id="portfolio-details-projectAccordion">
@@ -222,7 +222,7 @@
                     </h2>
                     <div id="portfolio-details-collapse-1" class="accordion-collapse collapse show" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Spearheaded a 3-month digital transformation for Heejuptogo, a local fashion brand. The project focused on reshaping the brand's digital presence by integrating organic content strategy with high-efficiency paid advertisements to capture a wider and more active audience.</p>
+                        <p>Developed a premium sports and networking event concept, Rally & Relate 2025, under KGTennis Academy to connect professionals, executives, and business owners through tennis and padel. The project focused on uniting sportsmanship and business synergy into a cohesive, sponsor-ready event narrative within Kompas Gramedia’s ecosystem.</p>
                       </div>
                     </div>
                   </div>
@@ -235,12 +235,11 @@
                     </h2>
                     <div id="portfolio-details-collapse-2" class="accordion-collapse collapse" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>Heejuptogo faced challenges in expanding its digital reach and activating audience engagement despite having an existing Instagram presence.</p>
+                        <p>As a corporate sports community, KGTennis Academy needed a strong narrative to position its event as more than just a sports gathering, while remaining attractive to sponsors and partners.</p>
                         <ul>
-                        <li>Low organic reach and limited audience growth.</li>
-                        <li>Inconsistent content performance and engagement.</li>
-                        <li>Instagram profile and bio not yet optimized to clearly communicate brand value.</li>
-                        <li>Paid ads had not been maximized to support organic content performance.</li>
+                        <li>Positioning sports as a credible business networking platform.</li>
+                        <li>Creating a compelling, sponsor-ready event narrative.</li>
+                        <li>Aligning lifestyle storytelling with corporate communication standards.</li>
                         </ul>
                       </div>
                     </div>
@@ -254,41 +253,12 @@
                     </h2>
                     <div id="portfolio-details-collapse-3" class="accordion-collapse collapse" data-bs-parent="#portfolio-details-projectAccordion">
                       <div class="accordion-body">
-                        <p>I led a 3-month Instagram growth and content optimization strategy by integrating organic content development with performance-driven paid advertisements.</p>
-                        <p><strong>Key Initiatives:</strong></p>
+                        <p>To address these challenges, I developed a comprehensive event narrative and sponsorship communication strategy that unified sportsmanship, business synergy, and lifestyle engagement under one cohesive identity.</p>
                         <ul>
-                        <li>
-                        <p><strong>Content Strategy Revamp</strong></p>
-                        <p>Developed a structured content framework focusing on:</p>
-                        <ul>
-                        <li>Product storytelling</li>
-                        <li>Educational &amp; relatable fashion content</li>
-                        <li>Trend-adaptive reels and visual formats</li>
-                        <li>Clear CTA to encourage saves, shares, and profile visits</li>
-                        </ul>
-                        </li>
-                        <li>
-                        <p>Instagram Profile Optimization</p>
-                        <ul>
-                        <li>Optimized Instagram bio to clearly communicate brand positioning, value proposition, and shopping intent</li>
-                        <li>Improved profile structure to support discoverability and conversion</li>
-                        </ul>
-                        </li>
-                        <li>
-                        <p>Organic + Paid Synergy</p>
-                        <ul>
-                        <li>Identified top-performing organic content and scaled them through paid ads</li>
-                        <li>Used paid ads not only for reach, but to boost engagement quality (saves, shares, interactions)</li>
-                        <li>Applied efficient audience targeting to reach relevant fashion &amp; modest wear audiences</li>
-                        </ul>
-                        </li>
-                        <li>
-                        <p>Performance Monitoring &amp; Iteration</p>
-                        <ul>
-                        <li>Continuously analyzed insights (reach, engagement rate, interaction source)</li>
-                        <li>Adjusted creatives, copy, and ad formats to maximize understanding and recall</li>
-                        </ul>
-                        </li>
+                        <li>Built a clear event concept and storytelling structure.</li>
+                        <li>Defined partnership value and sponsorship messaging.</li>
+                        <li>Aligned visual tone and communication style with Kompas Gramedia&rsquo;s brand ecosystem.</li>
+                        <li>Mapped media exposure to support visibility and partner value.</li>
                         </ul>
                         <p></p>
                       </div>
@@ -302,24 +272,24 @@
                 <div class="row g-3">
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Strategic Content Framework</li>
-                      <li><i class="bi bi-check2-circle"></i> Audience & Insight-Driven Planning</li>
-                      <li><i class="bi bi-check2-circle"></i> Visual & Brand Repositioning</li>
+                      <li><i class="bi bi-check2-circle"></i> Integrated Event Storytelling</li>
+                      <li><i class="bi bi-check2-circle"></i> Sponsorship & Partnership Framework</li>
+                      <li><i class="bi bi-check2-circle"></i> Audience-Centric Concept Design</li>
                     </ul>
                   </div>
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Organic + Paid Growth Strategy</li>
-                      <li><i class="bi bi-check2-circle"></i> Performance Tracking & Optimization</li>
-                      <li><i class="bi bi-check2-circle"></i> Scalable Content System</li>
+                      <li><i class="bi bi-check2-circle"></i> Media Ecosystem Activation</li>
+                      <li><i class="bi bi-check2-circle"></i> Visual & Narrative Direction</li>
+                      <li><i class="bi bi-check2-circle"></i> Community & Brand Synergy Strategy</li>
                     </ul>
                   </div>
                 </div>
               </div>
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
-                <a href="https://www.instagram.com/heejuptogo___/" target="_blank" class="btn-view-project">View Live Project</a>
-                <a href="#" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="https://www.instagram.com/kgtennisacademy/" target="_blank" class="btn-view-project">View Live Project</a>
+                <a href="creative-visual-asset.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -335,20 +305,20 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">FolioOne</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
+        <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you've purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: [buy-url] -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       </div>
     </div>
 
