--- a/creative-visual-asset.html
+++ b/creative-visual-asset.html
@@ -168,7 +168,7 @@
                     <img src="assets/img/portfolio/Tribunnews social media post.jpg" alt="" class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 11.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/poster sambal.jpg" alt="" class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
@@ -289,7 +289,7 @@
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                 <a href="https://www.instagram.com/tribunnews/" target="_blank" class="btn-view-project">View Live Project</a>
-                <a href="#" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="dermies-max-experience.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
