--- a/portfolio.html
+++ b/portfolio.html
@@ -175,7 +175,7 @@
                   <img src="assets/img/portfolio/Dermiesmax.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
                     <a href="assets/img/portfolio/Dermiesmax.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="dermies-max-experience.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
