--- a/dermies-max-experience.html
+++ b/dermies-max-experience.html
@@ -77,10 +77,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -130,13 +131,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Dermiesmax.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/dermiesmax/dermiesmax_clinic.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Glowing_Skin.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/dermiesmax/dermiesmax_acne_free_skin.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Acne_Free_Skin.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/dermiesmax/dermiesmax_glowing_skin.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -153,16 +154,16 @@
                     <img src="assets/img/portfolio/Dermies Max Experience Campaign (2).jpg" alt="" class="img-fluid glightbox">
                   </div> -->
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Dermies Max Experience Campaign (3).jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/dermiesmax/dermies_brand_story.jpg" alt="KOL campaign brand story presentation for Dermies Max by ERHA, prepared and managed by campaign manager to align influencer content with brand positioning and affordable dermatology." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Dermies Max Experience Campaign (4).jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/dermiesmax/dermies_workflow_KOL.jpg" alt="Influencer campaign workflow for Dermies Max, outlining booking, clinic visit, content documentation, review posting, and payment process managed by campaign management." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Dermies Max Experience Campaign (5).jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/dermiesmax/dermies_brief.jpg" alt="Influencer content brief for Dermies Max acne treatment campaign, created by campaign manager to guide KOLs on storytelling, tone, posting structure, and engagement objectives." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Dermies Max Experience Campaign (6).jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/dermiesmax/dermies_brief_student.jpg" alt="Student-focused influencer campaign brief for Dermies Max, managed to communicate affordable skincare treatments and promotional offers through relatable KOL content." class="img-fluid glightbox">
                   </div>
                   <!-- <div class="col-3">
                     <img src="assets/img/portfolio/Dermies Max Experience Campaign (7).jpg" alt="" class="img-fluid glightbox">
@@ -303,13 +304,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
         <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
