--- a/instagram-growth-and-content-strategy.html
+++ b/instagram-growth-and-content-strategy.html
@@ -77,10 +77,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -130,13 +131,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/social media heejuptogo.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/heejuptogo/heejuptogo_ig.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/heejuptogo social media.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/heejuptogo/heejuptogo_social_media.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/heejuptogo instagram.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/heejuptogo/heejuptogo_preview_post.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -147,28 +148,28 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/content pillar.jpg" alt="At the heart of Heejuptogo is our core message: Self Love: Be You. Our strategy is anchored by four key pillars&mdash;Education (50%), Engagement (30%), Promo (10%), and Inspiration (10%)&mdash;to drive brand awareness while providing real value. By balancing deep product knowledge with relatable lifestyle content and interactive challenges, we aim to build a meaningful connection with our audience that goes beyond just clothing." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_content_pillar.jpg" alt="At the heart of Heejuptogo is our core message: Self Love: Be You. Our strategy is anchored by four key pillars&mdash;Education (50%), Engagement (30%), Promo (10%), and Inspiration (10%)&mdash;to drive brand awareness while providing real value. By balancing deep product knowledge with relatable lifestyle content and interactive challenges, we aim to build a meaningful connection with our audience that goes beyond just clothing." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/content plan.jpg" alt="Stay organized and consistent with our structured two-week content schedule for Heejuptogo, designed to keep our community engaged every single day. From Daily Looks and Product Best Sellers to interactive anniversary countdowns and movie-inspired outfit ideas, this calendar ensures a seamless blend of Feed and Story updates that build excitement and keep our fashion-forward audience coming back for more." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_content_plan.jpg" alt="Stay organized and consistent with our structured two-week content schedule for Heejuptogo, designed to keep our community engaged every single day. From Daily Looks and Product Best Sellers to interactive anniversary countdowns and movie-inspired outfit ideas, this calendar ensures a seamless blend of Feed and Story updates that build excitement and keep our fashion-forward audience coming back for more." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/top 3 post.jpg" alt="Our feed performance highlights the power of community interaction, with our top three posts from August 16–28 all rooted in the Engagement pillar. Leading the way is our Anniversary Giveaway, which generated over 3,700 reach and high save rates, followed by interactive math-themed games and outfit quizzes that reached up to 4,460 accounts. These results prove that two-way communication is key to driving profile visits and sustained interest in the brand." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_top3_post.jpg" alt="Our feed performance highlights the power of community interaction, with our top three posts from August 16–28 all rooted in the Engagement pillar. Leading the way is our Anniversary Giveaway, which generated over 3,700 reach and high save rates, followed by interactive math-themed games and outfit quizzes that reached up to 4,460 accounts. These results prove that two-way communication is key to driving profile visits and sustained interest in the brand." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/top 3 igs.jpg" alt="In the world of Instagram Stories, the Engagement pillar continues to dominate, focusing on interactive features to connect with our audience. Our This or That series and introductory games performed exceptionally well, with the top story reaching 602 accounts and generating 473 forward taps. By utilizing polls and interactive stickers, we’ve successfully created a dynamic space where #Heejuplova can actively participate in the brand's journey." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_top3_igs.jpg" alt="In the world of Instagram Stories, the Engagement pillar continues to dominate, focusing on interactive features to connect with our audience. Our This or That series and introductory games performed exceptionally well, with the top story reaching 602 accounts and generating 473 forward taps. By utilizing polls and interactive stickers, we’ve successfully created a dynamic space where #Heejuplova can actively participate in the brand's journey." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/paid brand awarness.jpg" alt="The Brand Awareness ads delivered 3,030 Ad Recall Lift in 3 days, reaching 41,991 people with an efficient CPM of Rp 2,800. This equals 7.21% Ad Recall Lift, exceeding the 5% KPI. The top-performing setup was Lookalike Audience 2% with Creative A." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_paid_brand_awarness.jpg" alt="The Brand Awareness ads delivered 3,030 Ad Recall Lift in 3 days, reaching 41,991 people with an efficient CPM of Rp 2,800. This equals 7.21% Ad Recall Lift, exceeding the 5% KPI. The top-performing setup was Lookalike Audience 2% with Creative A." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/paid engagement.jpg" alt="The Post Engagement ads generated 14,450 interactions in just 2 days, reaching 35,824 people with a low CPM of Rp 4,300. This means 40.33% of the audience interacted with the content, far exceeding the 10% target. The best performance came from Broad Audience with Creative D." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_paid_engagement.jpg" alt="The Post Engagement ads generated 14,450 interactions in just 2 days, reaching 35,824 people with a low CPM of Rp 4,300. This means 40.33% of the audience interacted with the content, far exceeding the 10% target. The best performance came from Broad Audience with Creative D." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/performance before.jpg" alt="During this period, the account reached 7,518 accounts and engaged 138 accounts, with total followers at 63.4K. Performance was relatively low, showing limited visibility and interaction." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_performance_before.jpg" alt="During this period, the account reached 7,518 accounts and engaged 138 accounts, with total followers at 63.4K. Performance was relatively low, showing limited visibility and interaction." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/performance after.jpg" alt="After optimization, the account experienced a major performance boost. Accounts reached jumped to 75.4K, representing a +903% increase, while accounts engaged rose to 599 (+334%). Total followers remained stable at 63.4K, indicating that the growth mainly came from improved content reach and engagement rather than follower increase." class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/heejuptogo/heejuptogo_performance_after.jpg" alt="After optimization, the account experienced a major performance boost. Accounts reached jumped to 75.4K, representing a +903% increase, while accounts engaged rose to 599 (+334%). Total followers remained stable at 63.4K, indicating that the growth mainly came from improved content reach and engagement rather than follower increase." class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
@@ -319,7 +320,7 @@
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                 <a href="https://www.instagram.com/heejuptogo___/" target="_blank" class="btn-view-project">View Live Project</a>
-                <a href="rally-relate-2025.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="creative-visual-asset.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -335,13 +336,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
         <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
