--- a/project-manager.html
+++ b/project-manager.html
@@ -77,10 +77,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -130,13 +131,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/project manager.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/lokatara/lokatara_project_manager.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Social media lokatara.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/lokatara/lokatara_mockup_social_media.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Power point.jpg" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/lokatara/lokatara_deck_power_point_pupuk_indonesia.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -153,29 +154,32 @@
                     <img src="assets/img/portfolio/Dermies Max Experience Campaign (2).jpg" alt="" class="img-fluid glightbox">
                   </div> -->
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Poster.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/lokatara/lokatara_annual_report_pupuk_indonesia.jpg" alt="Annual report cover design project for Pupuk Indonesia, managed at Lokatara Studio, involving talent coordination, client briefing, and stakeholder management." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Kerupuk Abon Lele.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/lokatara/lokatara_branding_ngobrol_bareng_pupuk_indonesia.jpg" alt="Podcast logo and branding project for Pupuk Indonesia, managed at Lokatara Studio, involving client brief alignment and talent coordination." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Logo Design_8th PIKA PI.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/lokatara/lokatara_branding_sido_lestari.jpg" alt="UMKM rebranding project for Sido Lestari, managed at Lokatara Studio, involving brainstorming, creative direction, and talent coordination." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/NgoPI_Brand Board.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/lokatara/lokatara_infografis_pupuk_indonesia.jpg" alt="Corporate infographic developed for Pupuk Indonesia, managed at Lokatara Studio, coordinating content structure, data visualization, and client requirements." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Banner piala dunia.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/lokatara/lokatara_logo_brand_pika_pi.jpg" alt="Project management for PIKA-PI brand identity, overseeing branding direction and stakeholder coordination." class="img-fluid glightbox">
+                  </div>
+                  <div class="col-3">
+                    <img src="assets/img/portfolio/lokatara/lokatara_album_petrokimia_gresik.jpg" alt="Project management for Petrokimia Gresik event photo album, overseeing layout design and digital image assets." class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
 
               <div class="tech-stack-badges" data-aos="fade-up" data-aos-delay="300">
-                <span>KOL Marketing</span>
-                <span>Influencer Strategy</span>
-                <span>Health & Beauty Branding</span>
-                <span>Digital Campaign</span>
-                <span>Brand Awareness</span>
+                <span>Project Management</span>
+                <span>Campaign Execution</span>
+                <span>Team Coordination</span>
+                <span>Creative Operations</span>
+                <span>Stakeholder Management</span>
               </div>
             </div>
           </div>
@@ -184,7 +188,7 @@
             <div class="portfolio-details-content">
               <div class="project-meta">
                 <div class="badge-wrapper">
-                  <span class="project-badge">Growth</span>
+                  <span class="project-badge">Collaborations</span>
                 </div>
                 <div class="date-client">
                   <div class="meta-item">
@@ -269,16 +273,16 @@
                 <div class="row g-3">
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Credibility-Driven Influencer Strategy</li>
-                      <li><i class="bi bi-check2-circle"></i> Educational Content Framework</li>
-                      <li><i class="bi bi-check2-circle"></i> Brand-Safe Messaging & Compliance</li>
+                      <li><i class="bi bi-check2-circle"></i> End-to-End Campaign Management</li>
+                      <li><i class="bi bi-check2-circle"></i> Cross-Functional Team Coordination</li>
+                      <li><i class="bi bi-check2-circle"></i> Brand Activation & Event Execution</li>
                     </ul>
                   </div>
                   <div class="col-md-6">
                     <ul class="feature-list">
-                      <li><i class="bi bi-check2-circle"></i> Authentic Storytelling Collaboration</li>
-                      <li><i class="bi bi-check2-circle"></i> Multi-Platform Content Activation</li>
-                      <li><i class="bi bi-check2-circle"></i> Performance Monitoring & Insight Evaluation</li>
+                      <li><i class="bi bi-check2-circle"></i> Creative Briefing & Quality Control</li>
+                      <li><i class="bi bi-check2-circle"></i> Timeline & Resource Optimization</li>
+                      <li><i class="bi bi-check2-circle"></i> Client Communication & Stakeholder Alignment</li>
                     </ul>
                   </div>
                 </div>
@@ -286,7 +290,7 @@
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                 <a href="https://www.instagram.com/dermiesmax/" target="_blank" class="btn-view-project">View Live Project</a>
-                <a href="" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="godslaves-2024.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -302,13 +306,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
         <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
