--- a/about.html
+++ b/about.html
@@ -76,10 +76,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -112,7 +113,7 @@
               </p> -->
 
               <div class="cta-group">
-                <a href="#portfolio" class="btn-ghost">
+                <a href="portfolio.html" class="btn-ghost">
                   View My Work <i class="bi bi-arrow-up-right"></i>
                 </a>
                 <a href="#" class="link-underline">
@@ -484,13 +485,12 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
-        <a href=""><i class="bi bi-twitter-x"></i></a>
-        <a href=""><i class="bi bi-facebook"></i></a>
-        <a href=""><i class="bi bi-instagram"></i></a>
-        <a href=""><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
