--- a/creative-visual-asset.html
+++ b/creative-visual-asset.html
@@ -77,10 +77,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -130,13 +131,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/BKKBN.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/tribunnews/tribunnews_bkkbn.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/BKKBN2.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/tribunnews/tribunnews_bkkbn_socmed.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/BKKBN News.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/tribunnews/tribun_news_bbkn_cukup_dua_telur.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -147,28 +148,28 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Microsite.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_microsite_mata_lokal_award.jpg" alt="Microsite UI design created in Figma for Tribunnews Mata Lokal Award, showcasing award categories and digital layout." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/OOH.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_ooh_tribun_makassar.jpg" alt="Out-of-home campaign visual created for Tribun Makassar, featuring large-format billboard design and cultural storytelling." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Longform.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_pemkab_konawe_utara_longform.jpg" alt="Longform digital storytelling visuals created for Konawe Utara local government, including infographics highlighting programs, achievements, and policy initiatives." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/banner ads.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/banner_ads_tiket_bmw_camel.jpg" alt="Poster and digital banner ad visual assets created for tiket.com, BMW, and Camel, showcasing commercial advertising design." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/TIL Campaign.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_campaign_tribun_inspirasi_lokal.jpg" alt="Microsite UI design created in Figma for Tribunnews Mata Lokal Award, showcasing award categories and digital layout." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/BCA Event.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_event_bca.jpg" alt="Visual assets created for Tribunnews coverage of BCA Expo event, including event banner, cue card, counting down video event and social media visuals." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Tribunnews social media post.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_lowongan_kerja_instagram_post.jpg" alt="Creative Instagram recruitment campaign design for Tribunnews, showcasing job vacancy social media visuals." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/poster sambal.jpg" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/tribunnews/tribun_poster_sambal_abc.jpg" alt="Poster and banner ad visual assets created for ABC Sambal brand, designed for digital advertising and promotional use." class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
@@ -187,7 +188,7 @@
             <div class="portfolio-details-content">
               <div class="project-meta">
                 <div class="badge-wrapper">
-                  <span class="project-badge">Growth</span>
+                  <span class="project-badge">Content</span>
                 </div>
                 <div class="date-client">
                   <div class="meta-item">
@@ -196,7 +197,7 @@
                   </div>
                   <div class="meta-item">
                     <i class="bi bi-buildings"></i>
-                    <span>KGTennis</span>
+                    <span>Tribunnews</span>
                   </div>
                 </div>
               </div>
@@ -289,7 +290,7 @@
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                 <a href="https://www.instagram.com/tribunnews/" target="_blank" class="btn-view-project">View Live Project</a>
-                <a href="dermies-max-experience.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="rally-relate-2025.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -305,13 +306,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
         <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
