--- a/portfolio.html
+++ b/portfolio.html
@@ -76,10 +76,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -101,34 +102,34 @@
         <div class="isotope-layout" data-default-filter="*" data-layout="masonry" data-sort="original-order">
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="200">
             <li data-filter="*" class="filter-active">All</li>
-            <li data-filter=".filter-strategy">Campaign</li>
-            <li data-filter=".filter-finance">Content</li>
-            <li data-filter=".filter-operations">Collaborations</li>
-            <li data-filter=".filter-technology">Growth</li>
+            <li data-filter=".filter-campaign">Campaign</li>
+            <li data-filter=".filter-content">Content</li>
+            <li data-filter=".filter-collaborations">Collaborations</li>
+            <li data-filter=".filter-growth">Growth</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row gy-4 isotope-container" data-aos="fade-up" data-aos-delay="300">
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-technology">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-campaign filter-content">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/heejuptogo.jpg" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/tribunnews/tribunnews_bkkbn.png" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/heejuptogo.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="instagram-growth-and-content-strategy.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/tribunnews/tribunnews_bkkbn.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="creative-visual-asset.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Instagram Growth & Content Strategy</h4>
-                  <p>Fashion Brand</p>
+                  <h4>Creative & Visual Asset</h4>
+                  <p>Digital Media</p>
                   <div class="portfolio-tags">
-                    <span>Strategy</span>
-                    <span>Growth</span>
+                    <span>Campaign</span>
+                    <span>Content</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-campaign filter-collaborations">
               <div class="portfolio-card">
                 <div class="portfolio-img">
                   <img src="assets/img/portfolio/Rally & Relate 2025.png" alt="Portfolio Item" class="img-fluid">
@@ -148,33 +149,12 @@
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-strategy">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-campaign filter-collaborations">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/BKKBN.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/dermiesmax/dermiesmax_clinic.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/BKKBN.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="creative-visual-asset.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
-                  </div>
-                </div>
-                <div class="portfolio-info">
-                  <h4>Creative & Visual Asset</h4>
-                  <p>Digital Media</p>
-                  <div class="portfolio-tags">
-                    <span>Campaign</span>
-                    <span>Content</span>
-                    <span>Growth</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
-              <div class="portfolio-card">
-                <div class="portfolio-img">
-                  <img src="assets/img/portfolio/Dermiesmax.jpg" alt="Portfolio Item" class="img-fluid">
-                  <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/Dermiesmax.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="assets/img/portfolio/dermiesmax/dermiesmax_clinic.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
                     <a href="dermies-max-experience.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
@@ -182,48 +162,68 @@
                   <h4>Dermies Max Experience</h4>
                   <p>Beauty Clinic</p>
                   <div class="portfolio-tags">
-                    <span>Collaborations</span>
                     <span>Campaign</span>
+                    <span>Collaborations</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-finance">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-growth filter-collaborations filter-growth">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/project manager.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/lokatara/lokatara_project_manager.png" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/project manager.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/lokatara/lokatara_project_manager.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="project-manager.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
                   <h4>Project Manager</h4>
                   <p>Creative Agency</p>
                   <div class="portfolio-tags">
+                    <span>Collaborations</span>
                     <span>Growth</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-campaign filter-collaborations">
+              <div class="portfolio-card">
+                <div class="portfolio-img">
+                  <img src="assets/img/portfolio/glad2glow/Glad2Glow_KOL.png" alt="Portfolio Item" class="img-fluid">
+                  <div class="portfolio-overlay">
+                    <a href="assets/img/portfolio/glad2glow/Glad2Glow_KOL.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="glad2glow-2024.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                  </div>
+                </div>
+                <div class="portfolio-info">
+                  <h4>Campaign & Talent Collaboration Pitch</h4>
+                  <p>Talent Agency</p>
+                  <div class="portfolio-tags">
+                    <span>Campaign</span>
                     <span>Collaborations</span>
                   </div>
                 </div>
               </div>
             </div>
 
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-operations">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-content filter-growth">
               <div class="portfolio-card">
                 <div class="portfolio-img">
-                  <img src="assets/img/portfolio/Glad2Glow.png" alt="Portfolio Item" class="img-fluid">
+                  <img src="assets/img/portfolio/heejuptogo/heejuptogo_ig.jpg" alt="Portfolio Item" class="img-fluid">
                   <div class="portfolio-overlay">
-                    <a href="assets/img/portfolio/Glad2Glow.png" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/heejuptogo/heejuptogo_ig.jpg" class="glightbox portfolio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="instagram-growth-and-content-strategy.html" class="portfolio-details-link"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
                 <div class="portfolio-info">
-                  <h4>Glad2Glow</h4>
-                  <p>Talent Agency</p>
+                    <h4>Instagram Growth & Content Strategy</h4>
+                  <p>Fashion Brand</p>
                   <div class="portfolio-tags">
-                    <span>Campaign</span>
-                    <span>Collaborations</span>
+                    <span>Content</span>
+                    <span>Growth</span>
                   </div>
                 </div>
               </div>
@@ -246,13 +246,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
         <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
