--- a/rally-relate-2025.html
+++ b/rally-relate-2025.html
@@ -77,10 +77,11 @@
       </nav>
 
       <div class="header-social-links">
-        <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="#" class="twitter"><i class="bi bi-twitter-x"></i></a>
+        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a> -->
+        <a href="https://www.instagram.com/fentyfni/" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.linkedin.com/in/fentyfni/" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" class="behance"><i class="bi bi-behance"></i></a>
       </div>
 
     </div>
@@ -130,13 +131,13 @@
                   </script>
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Rally & Relate 2025.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_cover.jpg" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Rally & Relate 2025 2.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_quotes.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                     <div class="swiper-slide">
-                      <img src="assets/img/portfolio/Rally & Relate 2025 3.png" alt="Portfolio Image" class="img-fluid">
+                      <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_contact.png" alt="Portfolio Image" class="img-fluid">
                     </div>
                   </div>
                   <div class="swiper-button-prev"></div>
@@ -147,28 +148,28 @@
               <div class="thumbnail-grid" data-aos="fade-up" data-aos-delay="200">
                 <div class="row g-2 mt-3">
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 4.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_3.jpg" alt="About KG Tennis Academy, a Kompas Gramedia community promoting active lifestyle, professional growth, and collaboration through tennis and padel programs." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 5.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_4.jpg" alt="Event objectives of Rally & Relate 2025 highlighting collaboration, relationship building, and healthy lifestyle through sports-driven business engagement." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 6.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_5.jpg" alt="Two courts, one experience concept visual showing tennis and padel as unified platforms for networking, collaboration, and business synergy." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 7.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_6.jpg" alt="Target audience framework designed for Rally & Relate 2025, connecting professionals, entrepreneurs, and internal media communities through sport, business, and meaningful engagement." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 8.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_7.jpg" alt="Why partner with Rally & Relate 2025 – showcasing business synergy, authentic engagement, media exposure, and long-term brand collaboration opportunities." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 9.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_8.jpg" alt="Media exposure plan for Rally & Relate 2025 featuring Kompas Gramedia digital channels, social media networks, PR coverage, and event documentation." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 10.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_9.jpg" alt="Partnership benefits of Rally & Relate 2025 for brands and community, focusing on premium exposure, authentic networking, and shared growth beyond the court." class="img-fluid glightbox">
                   </div>
                   <div class="col-3">
-                    <img src="assets/img/portfolio/Rally & Relate 2025 11.png" alt="" class="img-fluid glightbox">
+                    <img src="assets/img/portfolio/kgtennis/kgtennis_rally_and_relate_10.jpg" alt="Rally & Relate 2025 sponsorship packages detailing Serve Partner, Rally Partner, Ace Partner, and Title Partner options with brand activation benefits." class="img-fluid glightbox">
                   </div>
                 </div>
               </div>
@@ -289,7 +290,7 @@
 
               <div class="cta-buttons" data-aos="fade-up" data-aos-delay="400">
                 <a href="https://www.instagram.com/kgtennisacademy/" target="_blank" class="btn-view-project">View Live Project</a>
-                <a href="creative-visual-asset.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
+                <a href="dermies-max-experience.html" class="btn-next-project">Next Project <i class="bi bi-arrow-right"></i></a>
               </div>
             </div>
           </div>
@@ -305,13 +306,13 @@
 
     <div class="container">
       <div class="copyright text-center ">
-        <p>© <span>Copyright</span> <strong class="px-1 sitename">Fenty Fauziah 2026</strong> <span>All Rights Reserved<br></span></p>
+        <p>© <span>2026</span> <strong class="px-1 sitename">Fenty Fauziah</strong> <span>All Rights Reserved<br></span></p>
       </div>
       <div class="social-links d-flex justify-content-center">
         <!-- <a href=""><i class="bi bi-twitter-x"></i></a> -->
-        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
         <a href="https://www.instagram.com/fentyfni/" target="_blank"><i class="bi bi-instagram"></i></a>
         <a href="https://www.linkedin.com/in/fentyfni/" target="_blank"><i class="bi bi-linkedin"></i></a>
+        <a href="https://www.behance.net/fentyfni" target="_blank"><i class="bi bi-behance"></i></a>
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
